--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
 
-    <link rel="stylesheet" type="text/css" href="_assets/app.css">
+    <link rel="stylesheet" type="text/css" href="/assets/app.css">
 
     <title>React App</title>
   </head>
