Homepage changes when logged in

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" type="text/css" href="/assets/app.css">
 
-    <title>React App</title>
+    <title>React User Authentication</title>
   </head>
   <body>
     <div id="root"></div>
