--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
     <title>React User Authentication</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div class="ajaxLoader">
+          <img width="400" height="300" src="/assets/images/ajaxloader.gif" alt="loading data">
+        </div>
+    </div>
     </body>
 </html>
