--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-
+    <link href="assets/thirdparty/css/bootstrap.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="/assets/app.css">
 
     <title>React User Authentication</title>
   </head>
   <body>
-    <div id="root">
-      <div class="ajaxLoader">
-          <img width="400" height="300" src="/assets/images/ajaxloader.gif" alt="loading data">
-        </div>
+    <div class="container">
+      <div id="root">
+          <div class="ajaxLoader">
+            <img width="400" height="300" src="/assets/images/ajaxloader.gif" alt="loading data">
+          </div>
+      </div>
     </div>
+    <script src="assets/thirdparty/js/jquery.js"></script>
+    <script src="assets/thirdparty/js/bootstrap.js"></script>
     </body>
 </html>
